--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class = "nav-links" id="navLinks">
             <i class="fa fa-times" onclick = "hideMenu()"></i>
             <ul>
-                <li><a href="">ATTACKERS</a></li>
-                <li><a href="">DEFENDERS</a></li>
+                <li><a href="#ATTACKERS">ATTACKERS</a></li>
+                <li><a href="#DEFENDERS">DEFENDERS</a></li>
                     
             </ul>
         </div>
@@ -34,7 +34,7 @@
 </section>
 
 <!--- Attckers--->
-<section class = " ATTACKERS">
+<section class = " ATTACKERS", id="ATTACKERS">
     <h1> Top 3 Attackers </h1>
     <p> Messi, Ronaldo and Neymar have had such an immense impact on both their clubs and countries. </p>
 
@@ -42,19 +42,19 @@
         <div class="category">
             <h3> Country</h3>
             <p> All three players have made an immense impact for the country's team. Messi won Argentina 
-                their 3rd worldcup as well as the copa america, Ronaldo one the euros but failed in
+                their 3rd worldcup as well as the copa america, Ronaldo won the euros but failed in
                 winning the WC misserably, and Neymar has become the all time leading scorer for brazil. </p>
         </div>
         <div class="category">
             <h3> Club</h3>
             <p> All three players have made an immense impact for the clubs. Messi won Barcelona 
-                4 champions leagues as well as 10 La Ligas, Ronaldo one the champion's league 5 times with two clubs,
+                4 champions leagues as well as 10 La Ligas, Ronaldo won the champion's league 5 times with two clubs,
                 and Neymar has one UCL and one the spanish and french league 3 times. </p>
         </div>
         <div class="category">
             <h3> Community</h3>
             <p> All three players have made an immense impact for the community. Messi won 7 ballon dors 
-                inspiring millions around the world, Ronaldo 3 golden boots inspiring people to score goals,
+                inspiring millions around the world, Ronaldo has 3 golden boots inspiring people to score goals,
                 and Neymar has bbeen crowned best player in brazil for 9 times and has become an icon in the streets of rio. </p>
         </div>
     </div>
@@ -87,28 +87,27 @@
 
 <!--deffedners-->
 
-<section class = " ATTACKERS">
-    <h1> Top 3 Attackers </h1>
-    <p> Messi, Ronaldo and Neymar have had such an immense impact on both their clubs and countries. </p>
+<section class = " ATTACKERS", id="DEFENDERS">
+    <h1> Top 3 Defenders </h1>
+    <p> Ramos, Puyol and Maldini have had such an immense impact on both their clubs and countries. </p>
 
     <div class ="row">
         <div class="category">
             <h3> Country</h3>
-            <p> All three players have made an immense impact for the country's team. Messi won Argentina 
-                their 3rd worldcup as well as the copa america, Ronaldo one the euros but failed in
-                winning the WC misserably, and Neymar has become the all time leading scorer for brazil. </p>
+            <p> All three players have made an immense impact for the country's team. Puyol and Ramos won the World Cup
+                tand the euros with spain, Maldini won the world cup in 2006 and being labled as the italian rock </p>
         </div>
         <div class="category">
             <h3> Club</h3>
-            <p> All three players have made an immense impact for the clubs. Messi won Barcelona 
-                4 champions leagues as well as 10 La Ligas, Ronaldo one the champion's league 5 times with two clubs,
-                and Neymar has one UCL and one the spanish and french league 3 times. </p>
+            <p> All three players have made an immense impact for the clubs. Puyol won with Barcelona 
+                3 champions leagues as well as 10 La Ligas, Ramos won the champion's league 4 times with Madrid,
+                and Maldini is arguably the best CB in the Serie A and has won the UCL with milan </p>
         </div>
         <div class="category">
             <h3> Community</h3>
-            <p> All three players have made an immense impact for the community. Messi won 7 ballon dors 
-                inspiring millions around the world, Ronaldo 3 golden boots inspiring people to score goals,
-                and Neymar has bbeen crowned best player in brazil for 9 times and has become an icon in the streets of rio. </p>
+            <p> All three players have made an immense impact for the community. Puyol won fair player of the year 3 times 
+                inspiring millions around the world, Ramos has 8 nine team of the year nominations,
+                and Maldini is a hero in Italy after building a football academy in his hometown.</p>
         </div>
     </div>
 </section>
@@ -119,19 +118,19 @@
     <p> All-time highest market value ever reached</p>
     <div class='row'>
         <div class="players-col">
-            <img src="images/messi.jpg">
-            <h3> MESSI</h3>
-            <p> Market Value: 560m Euros</p>
+            <img src="images/p.jpg">
+            <h3> Puyol</h3>
+            <p> Market Value: 100m Euros</p>
         </div>
         <div class="players-col">
-            <img src="images/CR7.jpg">
-            <h3> Ronaldo</h3>
-            <p> Market Value: 360m Euros</p>
+            <img src="images/r.jpg">
+            <h3> Ramos</h3>
+            <p> Market Value: 100m Euros</p>
         </div>
         <div class="players-col">
-            <img src="images/ney.jpg">
-            <h3> Neymar</h3>
-            <p> Market Value: 260m Euros</p>
+            <img src="images/m.jpg">
+            <h3> Maldini</h3>
+            <p> Market Value: 100m Euros</p>
         </div>
     </div>
 
